Fix hover state for menu items on Dark Mode.

--- a/frontend/src/app/modules/mips/components/list/list.component.scss
+++ b/frontend/src/app/modules/mips/components/list/list.component.scss
@@ -636,15 +636,6 @@ a {
   color: #1aab9b;
 }
 
-:host::ng-deep.subset-table {
-  td.mat-cell.mat-column-pos {
-    border-bottom: none !important;
-  }
-
-  tr:last-child td.mat-cell {
-    border-bottom-color: transparent;
-  }
-}
 
 :host::ng-deep.subset-table-children {
   td.mat-cell {
@@ -1031,3 +1022,15 @@ tr.mat-row.maker-element-row:hover {
   }
 }
 
+
+:host::ng-deep.subset-table {
+  td.mat-cell.mat-column-pos {
+    border-bottom:  none;
+    border-bottom-color: transparent;
+    border-top:  none;
+  }
+
+  tr:last-child td.mat-cell {
+    border-bottom-color: transparent;
+  }
+}
