--- a/frontend/src/app/shared/menu/menu.component.scss
+++ b/frontend/src/app/shared/menu/menu.component.scss
@@ -487,7 +487,9 @@
   opacity:0.7;
 }
 
-a.dropdown.dropdown-dark > span:hover {
-  color:#F5F6FA;
+a.dropdown.dropdown-dark:hover {
+  span {
+    color:#F5F6FA;
+  }
 }
 
